syntax = "proto3";

package silenteight.learningstore.historicaldecision.v2.api;

import "google/api/field_behavior.proto";
import public "common.proto";

option java_package = "com.silenteight.proto.learningstore.historicaldecision.v2.api";
option java_outer_classname = "ContextualLearningExchangeProto";
option java_multiple_files = true;

// Message sent by Bridge to the Learning Engine queue. Related to Historical Decisions learning.
message ContextualLearningExchangeRequest {
  repeated ContextualLearningAlert alerts = 1 [(google.api.field_behavior) = REQUIRED];
}

message ContextualLearningAlert {
  string alert_id = 1 [(google.api.field_behavior) = REQUIRED]; // e.g. ALERT_ID_101
  string match_id = 2 [(google.api.field_behavior) = REQUIRED]; // e.g. MATCH_ID_011
  string match_text = 3 [(google.api.field_behavior) = REQUIRED]; // e.g. LA NEGRA
  string matching_field = 4 [(google.api.field_behavior) = REQUIRED]; // e.g. GARCIA LUIS 314 LA NEGRA ANTOFAGASTA CHILE
  Watchlist watchlist = 5 [(google.api.field_behavior) = REQUIRED];
  repeated Decision decisions = 6 [(google.api.field_behavior) = REQUIRED];
  repeated Discriminator discriminators = 7 [(google.api.field_behavior) = REQUIRED];
}
